# libdircpy

./: Cargo.toml  README.md
include/: dircpy.h
src/: lib.rs
